[tool.poetry]
name = "mikm"
version = "0.1.0"
description = "Library for converting miles in kilometers and kilometers in miles."
authors = ["serhii73 <aserhii@protonmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/serhii73/mikm"
repository = "https://github.com/serhii73/mikm"
keywords = ["converting", "kilometers", "miles", "conversion"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.7",
]

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
pytest = "^3.0"
pre-commit = "^1.17"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
